--- a/app/public/wp-content/themes/Basebuild/src/scss/core/high-contrast.scss
+++ b/app/public/wp-content/themes/Basebuild/src/scss/core/high-contrast.scss
@@ -58,7 +58,7 @@ $black: #101820;
         }
     }
 
-    .blue-text, .red-text{
+    .blue-text, .red-text, .green-text{
         color: black !important;
     }
 
