--- a/app/public/wp-content/themes/Basebuild/src/scss/core/links.scss
+++ b/app/public/wp-content/themes/Basebuild/src/scss/core/links.scss
@@ -5,7 +5,7 @@
 
 a {
     color: $blue;
-    font-weight: 600;
+    // font-weight: 600;
     padding: 2px;
     text-decoration: none;
     transition: all 0.3s;
